RESOLVED FIXED258434
REGRESSION: Space bar for page down works intermittently
https://bugs.webkit.org/show_bug.cgi?id=258434
Summary REGRESSION: Space bar for page down works intermittently
Richard Robinson
Reported 2023-06-22 21:19:20 PDT
Attachments
Richard Robinson
Comment 1 2023-06-22 21:21:22 PDT
EWS
Comment 2 2023-06-28 16:43:10 PDT
Committed 265602@main (f52fe75ad080): <https://commits.webkit.org/265602@main> Reviewed commits have been landed. Closing PR #15223 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.